package edu.fiuba.algo3.modelo.Celda.Fabrica;

import edu.fiuba.algo3.modelo.Celda.Celda;
import edu.fiuba.algo3.modelo.Direccion.Direccion;

public interface FabricaCelda {
    Celda crearCelda( Direccion dir );
}
